--- a/white_chat.html
+++ b/white_chat.html
@@ -220,12 +220,12 @@
 </main>
 <script id="user-template" type="text/x-handlebars-template">
     <a href="#" id="user-link-{{userId}}" onclick="selectUser('{{userId}}')" class="list-group-item list-group-item-action border-0">
-        <div id="newMessages_'{{userName}}'" class="badge bg-success float-right">{{new_messages}}</div>
+        <div id="newMessages_{{username}}" class="badge bg-success float-right">{{new_messages}}</div>
         <div class="d-flex align-items-start">
             <img src="http://127.0.0.1:8081/images/defaultUser.jpeg" class="rounded-circle mr-1"
                  alt="default" width="40" height="40">
             <div id="username-area" class="flex-grow-1 ml-3">
-                {{userName}}
+                {{username}}
                 <div class="small"><span class="fas fa-circle chat-online"></span>{{online}}</div>
             </div>
         </div>
@@ -254,7 +254,7 @@
             <div class="text-muted small text-nowrap mt-2">{{ time }}</div>
         </div>
         <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
-            <div class="font-weight-bold mb-1">{{ userName }}</div>
+            <div class="font-weight-bold mb-1">{{ username }}</div>
             {{ message }}
         </div>
     </div>
