add: text area disable/enable

--- a/white_chat.html
+++ b/white_chat.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!--  This file has been downloaded from bootdey.com @bootdey on twitter -->
     <!--  All snippets are MIT license http://bootdey.com/license -->
-    <title>white chat - Bootdey.com</title>
+    <title>Cuppa Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
@@ -44,65 +44,6 @@
                 </div>
                 <!--                    User List end-->
 
-
-                <!--                <div id="chat-list" class="col-12 col-lg-3 col-xl-3 border-right">-->
-
-<!--                    <div id="chat-search-block" class="px-4 d-none d-md-block">-->
-<!--                        <div class="d-flex align-items-center">-->
-<!--                            <div class="flex-grow-1">-->
-<!--                                <input type="text" class="form-control my-3" placeholder="Search...">-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-
-<!--                    <a href="#" onclick="selectUser('Sharon Lessman')" class="list-group-item list-group-item-action border-0">-->
-<!--                        <div class="d-flex align-items-start">-->
-<!--                            <img src="http://127.0.0.1:8081/images/defaultUser.jpeg" class="rounded-circle mr-1"-->
-<!--                                 alt="Sharon Lessman" width="40" height="40">-->
-<!--                            <div class="flex-grow-1 ml-3">-->
-<!--                                채팅방 1-->
-<!--                                <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-
-<!--                    <a href="#" onclick="selectUser('Sharon Lessman')" class="list-group-item list-group-item-action border-0">-->
-<!--                        <div class="d-flex align-items-start">-->
-<!--                            <img src="http://127.0.0.1:8081/images/defaultUser.jpeg" class="rounded-circle mr-1"-->
-<!--                                 alt="Sharon Lessman" width="40" height="40">-->
-<!--                            <div class="flex-grow-1 ml-3">-->
-<!--                                채팅방 1-->
-<!--                                <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-
-<!--                    <div id="dLabel" class="dropdown list-group-item list-group-item-action border-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-<!--                        <a href="#" onclick="" >-->
-
-<!--                        <div class="d-flex align-items-start">-->
-<!--                            <img src="http://127.0.0.1:8081/images/defaultUser.jpeg" class="rounded-circle mr-1"-->
-<!--                                 alt="Sharon Lessman" width="40" height="40">-->
-
-
-<!--                            <div class="dropdown-menu col-12" aria-labelledby="dLabel">-->
-<!--                                <a class="dropdown-item" href="#" onclick="selectUser('Sharon Lessman')">대화하기</a>-->
-<!--                                <a class="dropdown-item" href="#">Another link</a>-->
-<!--                            </div>-->
-
-<!--                            <div class="flex-grow-1 ml-3">-->
-<!--                                채팅방 1-->
-<!--                                <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-
-<!--                    <hr class="d-block d-lg-none mt-1 mb-0">-->
-<!--                </div>-->
-            <!-- chat room end -->
-
-
             <div class="col-12 col-lg-8">
                     <div class="py-2 px-4 border-bottom d-lg-block">
                         <div class="d-flex align-items-center py-1">
@@ -111,8 +52,8 @@
                                      class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
                             </div>
                             <div class="flex-grow-1 pl-3">
-                                <strong id="chat-with">Sharon Lessman</strong>
-                                <div class="text-muted small"><em>Typing...</em></div>
+                                <strong id="chat-with"></strong>
+                                <div class="text-muted small"><em></em></div>
                             </div>
 
 
