add: created time formatting

--- a/white_chat.html
+++ b/white_chat.html
@@ -148,6 +148,8 @@
     </div>
 </script>
 </body>
+<script type="text/javascript" src="js/moment-with-locales.js"></script>
 <script type="text/javascript" src="js/custom3.js"></script>
 <script type="text/javascript" src="js/chat3.js"></script>
+
 </html>
