--- a/index.html
+++ b/index.html
@@ -22,9 +22,16 @@
 <main class="content">
     <div class="container p-0">
 
-        <h1 class="h3 mb-3">Messages</h1>
-
-            <h3 id="loginUserArea" class="h5 mb-3"><span id="usernameArea"></span> 님 안녕하세요</h3>
+        <h1 class="h3 mb-3">Cuppa</h1>
+        <div class="row d-flex justify-content-between">
+            <div class="col">
+                <h3 id="loginUserArea" class="h5 mb-3"><span id="usernameArea"></span> 님 안녕하세요</h3>
+            </div>
+            <div class="col py-1 d-flex justify-content-end">
+                <button id="loginButton" onclick="location.href='http://127.0.0.1:8081/login'"
+                class="btn btn-outline-dark mb-3 px-3"> 로그인 </button>
+            </div>
+        </div>
 
         <div class="card">
             <div class="d-flex row g-0">
@@ -46,8 +53,8 @@
                     <div class="py-2 px-4 border-bottom d-lg-block">
                         <div class="d-flex align-items-center py-1">
                             <div class="position-relative">
-                                <img id="selected-user-image" src="http://127.0.0.1:8080/images/defaultUser.jpeg"
-                                     class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
+                                <img id="selected-user-image" src="/images/defaultUser.jpeg"
+                                     class="rounded-circle mr-1" alt="user" width="40" height="40">
                             </div>
                             <div class="flex-grow-1 pl-3">
                                 <strong id="chat-with"></strong>
@@ -56,14 +63,14 @@
 
 
                             <div>
-                                <button class="btn btn-primary btn-lg mr-1 px-3">
+                                <button class="btn btn-outline-success btn-lg mr-1 px-3">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                          fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                          stroke-linejoin="round" class="feather feather-phone feather-lg">
                                         <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                                     </svg>
                                 </button>
-                                <button class="btn btn-info btn-lg mr-1 px-3 d-none d-md-inline-block">
+                                <button class="btn btn-outline-danger btn-lg mr-1 px-3 d-none d-md-inline-block">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                          fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                          stroke-linejoin="round" class="feather feather-video feather-lg">
@@ -71,7 +78,7 @@
                                         <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
                                     </svg>
                                 </button>
-                                <button class="btn btn-light border btn-lg px-3">
+                                <button class="btn border btn-lg px-3">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                          fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                          stroke-linejoin="round" class="feather feather-more-horizontal feather-lg">
@@ -93,7 +100,7 @@
                     <div class="flex-grow-0 py-3 px-4 border-top">
                         <div class="input-group">
                             <input id="message-input" type="text" class="form-control" placeholder="Type your message">
-                            <button id="sendBtn" class="btn btn-primary">Send</button>
+                            <button id="sendBtn" class="btn btn-light">Send</button>
                         </div>
                     </div>
 
@@ -108,7 +115,7 @@
     <a href="#" id="user-link-{{userId}}" onclick="selectUser('{{userId}}')" class="list-group-item list-group-item-action border-0">
         <div id="newMessages_{{userId}}" class="badge bg-success float-right">{{new_messages}}</div>
         <div class="d-flex align-items-start">
-            <img src="http://127.0.0.1:8080/images/defaultUser.jpeg" class="rounded-circle mr-1"
+            <img src="/images/defaultUser.jpeg" class="rounded-circle mr-1"
                  alt="default" width="40" height="40">
             <div class="flex-grow-1 ml-3">
                 <span id="username-area-{{userId}}">{{username}}</span>
@@ -121,7 +128,7 @@
 <script id="message-template" type="text/x-handlebars-template">
         <div class="chat-message-right pb-4">
             <div>
-                <img src="http://127.0.0.1:8080/images/defaultUser.jpeg"
+                <img src="/images/defaultUser.jpeg"
                      class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
                 <div class="text-muted small text-nowrap mt-2">{{time}}</div>
             </div>
@@ -135,7 +142,7 @@
 <script id="message-response-template" type="text/x-handlebars-template">
     <div class="chat-message-left pb-4">
         <div>
-            <img src="http://127.0.0.1:8080/images/defaultUser.jpeg"
+            <img src="/images/defaultUser.jpeg"
                  class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
             <div class="text-muted small text-nowrap mt-2">{{ time }}</div>
         </div>
