--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet"
           type="text/css">
     <link rel="stylesheet" href="css/custom_style3.css">
+    <script src="js/env.js"></script>
+
 </head>
 <body>
 <main class="content">
@@ -28,7 +30,7 @@
                 <h3 id="loginUserArea" class="h5 mb-3"><span id="usernameArea"></span> 님 안녕하세요</h3>
             </div>
             <div class="col py-1 d-flex justify-content-end">
-                <button id="loginButton" onclick="location.href='http://127.0.0.1:8081/login'"
+                <button id="loginButton" onclick="location.href=API_URL+'/login'"
                 class="btn btn-outline-dark mb-3 px-3"> 로그인 </button>
             </div>
         </div>
