--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--    libs for stomp and sockjs-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.js"></script>
@@ -39,17 +39,17 @@
 
         <div class="card">
             <div class="d-flex row g-0">
-                <div id="user-list" class="col-12 col-lg-4 border-right">
+                <div id="user-list" class="col-12 col-lg-4 border-end border-bottom">
 
                     <div id="search-block" class="px-4 d-none d-md-block">
                         <div class="d-flex align-items-center">
                             <div class="flex-grow-1">
-                                <input type="text" class="form-control my-3" placeholder="Search...">
+                                <input type="text" class="form-control my-3" placeholder="Search..." disabled>
                             </div>
                         </div>
                     </div>
 
-                    <hr class="d-block d-lg-none mt-1 mb-0">
+                    <hr class="d-block d-lg-none mt-1 mb-0 visually-hidden">
                 </div>
                 <!--                    User List end-->
 
@@ -74,7 +74,7 @@
                                         <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
                                     </svg>
                                 </button>
-                                <button class="btn btn-outline-danger btn-lg mr-1 px-3 d-none d-md-inline-block">
+                                <button class="btn btn-outline-danger btn-lg mr-1 px-3">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                          fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                          stroke-linejoin="round" class="feather feather-video feather-lg">
