--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h3 id="loginUserArea" class="h5 mb-3"><span id="usernameArea"></span> 님 안녕하세요</h3>
             </div>
             <div class="col py-1 d-flex justify-content-end">
-                <button id="loginButton" onclick="location.href=API_URL+'/login'"
+                <button id="loginButton" onclick="location.href=API_URL+'/auth/login'"
                 class="btn btn-outline-dark mb-3 px-3"> 로그인 </button>
             </div>
         </div>
