--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <script id="user-template" type="text/x-handlebars-template">
     <a href="#" id="user-link-{{userId}}" onclick="selectUser('{{userId}}')" class="list-group-item list-group-item-action border-0">
-        <div id="newMessages_{{userId}}" class="badge bg-success float-right">{{new_messages}}</div>
+        <div id="newMessages_{{userId}}" class="badge bg-success float-end">{{new_messages}}</div>
         <div class="d-flex align-items-start">
             <img src="/images/defaultUser.jpeg" class="rounded-circle mr-1"
                  alt="default" width="40" height="40">
