--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Cuppa Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <meta name="csrf-token" content="{{#_csrf}}token{{/_csrf}}">-->
+    <!--    <meta name="csrf-token" content="{{#_csrf}}token{{/_csrf}}">-->
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
@@ -33,27 +33,33 @@
             </div>
             <div class="col py-1 d-flex justify-content-end">
                 <button id="loginButton" onclick="location.href=API_URL+'/auth/login'"
-                class="btn btn-outline-dark mb-3 px-3"> 로그인 </button>
+                        class="btn btn-outline-dark mb-3 px-3"> 로그인
+                </button>
             </div>
         </div>
 
         <div class="card">
-            <div class="d-flex row g-0">
-                <div id="user-list" class="col-12 col-lg-4 border-end border-bottom">
+            <div class="row g-0">
+                <div id="user-pane" class="col-12 col-lg-4 border-end border-bottom">
 
-                    <div id="search-block" class="px-4 d-none d-md-block">
+                    <div id="search-block" class="px-4 d-md-block">
                         <div class="d-flex align-items-center">
                             <div class="flex-grow-1">
                                 <input type="text" class="form-control my-3" placeholder="Search..." disabled>
                             </div>
                         </div>
                     </div>
+                    <div id="user-list" class="d-sm-block d-flex flex-column user-list">
 
-                    <hr class="d-block d-lg-none mt-1 mb-0 visually-hidden">
+                        <hr class="d-block d-lg-none mt-1 mb-0 visually-hidden">
+                    </div>
+                    <div class="flex-shrink-0"></div>
                 </div>
+
+
                 <!--                    User List end-->
 
-            <div class="col-12 col-lg-8">
+                <div class="col-12 col-lg-8 d-flex flex-column">
                     <div class="py-2 px-4 border-bottom d-lg-block">
                         <div class="d-flex align-items-center py-1">
                             <div class="position-relative">
@@ -67,35 +73,35 @@
 
 
                             <div id="call-buttons">
-<!--                                <button class="btn btn-outline-success btn-lg mr-1 px-3">-->
-<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
-<!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
-<!--                                         stroke-linejoin="round" class="feather feather-phone feather-lg">-->
-<!--                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>-->
-<!--                                    </svg>-->
-<!--                                </button>-->
-<!--                                <button class="btn btn-outline-danger btn-lg mr-1 px-3">-->
-<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
-<!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
-<!--                                         stroke-linejoin="round" class="feather feather-video feather-lg">-->
-<!--                                        <polygon points="23 7 16 12 23 17 23 7"></polygon>-->
-<!--                                        <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>-->
-<!--                                    </svg>-->
-<!--                                </button>-->
-<!--                                <button class="btn border btn-lg px-3">-->
-<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
-<!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
-<!--                                         stroke-linejoin="round" class="feather feather-more-horizontal feather-lg">-->
-<!--                                        <circle cx="12" cy="12" r="1"></circle>-->
-<!--                                        <circle cx="19" cy="12" r="1"></circle>-->
-<!--                                        <circle cx="5" cy="12" r="1"></circle>-->
-<!--                                    </svg>-->
-<!--                                </button>-->
+                                <!--                                <button class="btn btn-outline-success btn-lg mr-1 px-3">-->
+                                <!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
+                                <!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
+                                <!--                                         stroke-linejoin="round" class="feather feather-phone feather-lg">-->
+                                <!--                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>-->
+                                <!--                                    </svg>-->
+                                <!--                                </button>-->
+                                <!--                                <button class="btn btn-outline-danger btn-lg mr-1 px-3">-->
+                                <!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
+                                <!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
+                                <!--                                         stroke-linejoin="round" class="feather feather-video feather-lg">-->
+                                <!--                                        <polygon points="23 7 16 12 23 17 23 7"></polygon>-->
+                                <!--                                        <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>-->
+                                <!--                                    </svg>-->
+                                <!--                                </button>-->
+                                <!--                                <button class="btn border btn-lg px-3">-->
+                                <!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"-->
+                                <!--                                         fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"-->
+                                <!--                                         stroke-linejoin="round" class="feather feather-more-horizontal feather-lg">-->
+                                <!--                                        <circle cx="12" cy="12" r="1"></circle>-->
+                                <!--                                        <circle cx="19" cy="12" r="1"></circle>-->
+                                <!--                                        <circle cx="5" cy="12" r="1"></circle>-->
+                                <!--                                    </svg>-->
+                                <!--                                </button>-->
                             </div>
                         </div>
                     </div>
 
-                    <div class="position-relative">
+                    <div class="position-relative flex-fill">
                         <div id="chat-messages" class="chat-messages p-4">
 
                         </div>
@@ -116,7 +122,8 @@
 
 
 <script id="user-template" type="text/x-handlebars-template">
-    <a href="#" id="user-link-{{userId}}" onclick="selectUser('{{userId}}')" class="list-group-item list-group-item-action border-0">
+    <a href="#" id="user-link-{{userId}}" onclick="selectUser('{{userId}}')"
+       class="list-group-item list-group-item-action border-0">
         <div id="newMessages_{{userId}}" class="badge bg-success float-end">{{new_messages}}</div>
         <div class="d-flex align-items-start">
             <img src="/images/defaultUser.jpeg" class="rounded-circle mr-1"
@@ -130,17 +137,17 @@
 </script>
 
 <script id="message-template" type="text/x-handlebars-template">
-        <div class="chat-message-right pb-4">
-            <div>
-                <img src="/images/defaultUser.jpeg"
-                     class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
-                <div class="text-muted small text-nowrap mt-2">{{time}}</div>
-            </div>
-            <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
-                <div class="font-weight-bold mb-1">You</div>
-                {{ message }}
-            </div>
+    <div class="chat-message-right pb-4">
+        <div>
+            <img src="/images/defaultUser.jpeg"
+                 class="rounded-circle mr-1" alt="Chris Wood" width="40" height="40">
+            <div class="text-muted small text-nowrap mt-2">{{time}}</div>
         </div>
+        <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+            <div class="font-weight-bold mb-1">You</div>
+            {{ message }}
+        </div>
+    </div>
 </script>
 
 <script id="message-response-template" type="text/x-handlebars-template">
